added check for na values

--- a/pdf_combiner.ipynb
+++ b/pdf_combiner.ipynb
@@ -64,6 +64,104 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023106</td>\n",
+       "      <td>Lewis, Allison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2023288.0</td>\n",
+       "      <td>2023288</td>\n",
+       "      <td>Snyder, Ben</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2023288.0</td>\n",
+       "      <td>2023092</td>\n",
+       "      <td>Some, Loser</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2022392.0</td>\n",
+       "      <td>2022392</td>\n",
+       "      <td>Sanders, Bernie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2022392.0</td>\n",
+       "      <td>2022424</td>\n",
+       "      <td>Doe, Jane</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>2022392.0</td>\n",
+       "      <td>2022389</td>\n",
+       "      <td>Random, Person</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Lead  Proposal          PI NAME\n",
+       "0        NaN   2023106   Lewis, Allison\n",
+       "1  2023288.0   2023288      Snyder, Ben\n",
+       "2  2023288.0   2023092      Some, Loser\n",
+       "3  2022392.0   2022392  Sanders, Bernie\n",
+       "4  2022392.0   2022424        Doe, Jane\n",
+       "5  2022392.0   2022389   Random, Person"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, fix the case where lead proposal is missing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lead</th>\n",
+       "      <th>Proposal</th>\n",
+       "      <th>PI NAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
        "      <td>2023106</td>\n",
        "      <td>2023106</td>\n",
        "      <td>Lewis, Allison</td>\n",
@@ -112,18 +210,19 @@
        "5  2022392   2022389   Random, Person"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "numbers['Lead'] = numbers['Lead'].fillna(numbers['Proposal']).astype(int)\n",
     "numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +258,7 @@
        "       'Doe, Jane', 'Random, Person'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +284,7 @@
        " 'Some, Loser']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +310,7 @@
        " 'Random, Person']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +338,7 @@
        " 'Random, Person']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +376,7 @@
        "dict_keys([2023106, 2023288, 2022392])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +544,7 @@
        "[PosixPath('pdfs/2023106.pdf'), PosixPath('pdfs/2023106_COA.pdf')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +571,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +613,7 @@
        "['pdfs/2023106.pdf', 'pdfs/2023106_COA.pdf']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +636,7 @@
        " 'pdfs/2023092_COA.pdf']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +656,7 @@
        "['pdfs/2022392_COA.pdf', 'pdfs/2022424_COA.pdf', 'pdfs/2022389_COA.pdf']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,16 +690,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<PyPDF2.pdf.PdfFileWriter at 0x116bc1fd0>"
+       "<PyPDF2.pdf.PdfFileWriter at 0x1112c8ad0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,14 +747,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "for num in number_groups.keys():\n",
-    "    file_list = pdf_file_getter(num)\n",
-    "    pdf_object = pdf_combiner(file_list)\n",
-    "    pdf_writer(pdf_object, \"{}_{}_combined.pdf\".format(names[num], num))"
+    "    try:\n",
+    "        file_list = pdf_file_getter(num)\n",
+    "        pdf_object = pdf_combiner(file_list)\n",
+    "        pdf_writer(pdf_object, \"{}_{}_combined.pdf\".format(names[num], num))\n",
+    "    except:\n",
+    "        print (\"PDF was not generated for Lead Proposal(s)\")\n",
+    "        print(num) #continue"
    ]
   },
   {
@@ -667,12 +770,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pdf_combiner(number_csv, pdf_directory, output_suffix=\"_combined\"):\n",
     "    numbers = pd.read_csv(number_csv)\n",
+    "    numbers['Lead'] = numbers['Lead'].fillna(numbers['Proposal']).astype(int)\n",
     "    pdf_dir = Path(pdf_directory)\n",
     "    number_groups = defaultdict(list)\n",
     "    for lead, proposal in zip(numbers['Lead'], numbers['Proposal']):\n",
@@ -701,14 +805,18 @@
     "        with open(file_name, 'wb') as outfile:\n",
     "            pdf_object.write(outfile)\n",
     "    for num in number_groups.keys():\n",
-    "        file_list = pdf_file_getter(num)\n",
-    "        pdf_object = pdf_combiner(file_list)\n",
-    "        pdf_writer(pdf_object, \"{0}_{1}{2}.pdf\".format(names[num], num, output_suffix))"
+    "        try:\n",
+    "            file_list = pdf_file_getter(num)\n",
+    "            pdf_object = pdf_combiner(file_list)\n",
+    "            pdf_writer(pdf_object, \"{0}_{1}{2}.pdf\".format(names[num], num, output_suffix))\n",
+    "        except:\n",
+    "            print (\"PDF was not generated for Lead Proposal(s)\")\n",
+    "            print(num) #continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
